Hook up war download for testing.
git-svn-id: https://svn.apache.org/repos/asf/manifoldcf/branches/CONNECTORS-1060@1632948 13f79535-47bb-0310-9956-ffa450edef68